# flower

./: .gitignore  01 start project by downloading sdl.bat  02 build sdl.bat  03 install sdl in program files x86 admin.bat  04 build project.bat  05 run project.bat  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION.md  LICENSE  OBJECTIVES.md  QUICKSTART.md  README.md
src/: engine.cpp  engine.h  entity.cpp  entity.h  limb.cpp  limb.h  main.cpp  math_utils.h  pickup.cpp  pickup.h  player.cpp  player.h  tool.cpp  tool.h  weapon.cpp  weapon.h  world.cpp  world.h
